1. Put in place a way to get global resources for Batik. The class XMLResourceDescriptor is used to get the XML parser classname for all apps.
2. Add an option that lets the user choose if he wants to zoom or not while
searching a string

PR:
Obtained from:
Submitted by:
Reviewed by:


git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/batik/trunk@199851 13f79535-47bb-0310-9956-ffa450edef68